--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/mongoose": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "barcode-validator": "^1.0.2",
+    "class-validator": "^0.14.1",
     "dotenv": "^16.4.7",
     "mongoose": "^8.10.0",
     "reflect-metadata": "^0.2.2",
